changed header to side panel

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-
+    <main>
         <section class="section-box">
             <h2 class="section-title">Get to Know Me</h2>
             <div class="hero primary-section">
@@ -229,5 +229,5 @@
                 </p>
             </article>
         </section>
-
+    </main>
   </body>
