added color scheme

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="section-box">
             <h2 class="section-title">Get to Know Me</h2>
             <div class="hero primary-section">
-                <div class="contact">
+                <div class="contact info-section">
                     <div class="hero-img">
                             <a href="https://github.com/LakelonBailey">
                                 <img src="./assets/images/GitHub-Mark-64px.png" alt="">
