final formatting and content additions

--- a/index.html
+++ b/index.html
@@ -117,32 +117,32 @@
             <h2 class="section-title">Projects</h2>
             <article class="projects primary-section">
                 <div class="main-project">
-                    <div class="project-title">
+                    <a class="project-title" href="https://lakelonbailey.github.io/LakelonBailey.io/">
                         <h3>Personal Website</h3>
-                    </div>
+                    </a>
                 </div>
                 <div class="project-box">
                     <div class="project-1 project">
-                        <div class="project-title">
-                            <h3>Empty Project</h3>
-                        </div>
+                        <a class="project-title" href="https://lakelonbailey.github.io/Horiseon-Code-Refactor/">
+                            <h3>Horiseon Code Refactor</h3>
+                        </a>
                     </div>
 
                     <div class="project-2 project">
-                        <div class="project-title">
-                            <h3>Empty Project</h3>
-                        </div>
+                        <a class="project-title" href="https://lakelonbailey.github.io/run-buddy/">
+                            <h3>Run Buddy</h3>
+                        </a>
                     </div>
                     
                     <div class="project-3 project">
-                        <div class="project-title">
+                        <a class="project-title" href="">
                             <h3>Empty Project</h3>
-                        </div>
+                        </a>
                     </div>
                     <div class="project-4 project">
-                        <div class="project-title">
+                        <a class="project-title" href="">
                             <h3>Empty Project</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </article>
@@ -159,10 +159,9 @@
                         <h3>Firebirds Wood Fired Grill</h3>
                         <div class="position">
                             <h4>Server</h4>
-                            <h5>Description</h5>
                             <ul>
-                                <li>list item</li>
-                                <li>list item</li>
+                                <li>Employed excellent customer service skills, having never received a customer complaint. </li>
+                                <li>Maintained a competitive average in ticket add-ons (average cost of ticket add-ons such as appetizers, alcoholic drinks, desserts, etc.) compared to other servers.</li>
                             </ul>
                         </div>
                     </div>
@@ -173,10 +172,9 @@
                         <h3>Olive Garden</h3>
                         <div class="position">
                             <h4>Server</h4>
-                            <h5>Description</h5>
                             <ul>
-                                <li>list item</li>
-                                <li>list item</li>
+                                <li>Employed excellent customer service skills, having never received a customer complaint. </li>
+                                <li>Maintained a competitive average in ticket add-ons (average cost of ticket add-ons such as appetizers, alcoholic drinks, desserts, etc.) compared to other servers.</li>
                             </ul>
                         </div>
                     </div>
@@ -187,28 +185,35 @@
                     <div class="job">
                         <h3>Outlier's Advantage: ACT Prep Academy</h3>
                         <div class="position">
-                            <h4>One on one tutor (include timeline)</h4>
-                            <h5>Descripton</h5>
+                            <h4>Overall (Aug. 2019 - Feb. 2022)</h4>
                             <ul>
-                                <li>List item</li>
-                                <li>List item</li>
+                                <li>Contributed useful ideas and input towards company policies and procedures.</li>
+                                <li>Attended monthly company meetings to summarize my team’s progress and accomplishments over the previous month.</li>
+                                <li>Earned and maintained trust over an extensive range of company responsibilities, occasionally completing tasks outside of direct positions</li>
                             </ul>
                         </div>
                         <div class="position">
-                            <h4>Academic Coach (Include timeline)</h4>
-                            <h5>Descripton</h5>
+                            <h4>One on one tutor (June 2020 - Feb. 2022)</h4>
                             <ul>
-                                <li>List item</li>
-                                <li>List item</li>
+                                <li>One on one coached a total of 18 students with total one on one coaching experience equating to over 270 hours. </li>
+                                <li>Maintained full responsibility over one on one students, including, but not limited to: coaching, communication with students and student’s parent/guardian, monitoring of students’ progress, scheduling of weekly meetings, and development of student-specific programs and subject work.</li>
+                                <li>One on one students who completed tutoring achieved a 5-point increase (on average)</li>
+                            </ul>
+                        </div>
+                        <div class="position">
+                            <h4>Academic Coach (Jan. 2020 - Dec. 2021)</h4>
+                            <ul>
+                                <li>Managed a team of two assistant coaches and as many as 40 students at once.</li>
+                                <li>Trained and guided assistant coaches on their individual responsibilities and performance.</li>
+                                <li>Coached a total of 173 students, with over 10% of these students reaching a 34/36 on the ACT (99% percentile score).</li>
                             </ul>
                         </div>
 
                         <div class="position">
-                            <h4>Assistant Coach (Include timeline)</h4>
-                            <h5>Descripton</h5>
+                            <h4>Assistant Coach (Aug. 2019 - Dec. 2019)</h4>
                             <ul>
-                                <li>List item</li>
-                                <li>List item</li>
+                                <li>Mentored a team of 20 students and encouraged an environment for academic success and growth </li>
+                                <li>Alternated responsibility with another assistant coach on a weekly basis between entering my students’ statistics (test scores, hours, etc.) and monitoring the students’ progress towards memorizing quiz material. </li>
                             </ul>
                         </div>
 
@@ -232,7 +237,7 @@
                         <h3>University of Tennessee, Knoxville - Sophomore</h3>
                         <div class="position">
                             <h4>Bachelor's Degree, Computer Science</h4>
-                            <h5>August 2020 - December 2024</h5>
+                            <h5>Aug. 2020 - Dec. 2024</h5>
                             <ul>
                                 <li>Minor: Mathematics</li>
                                 <li>Minor: Data Science</li>
@@ -247,7 +252,7 @@
                         <h3>Vanderbilt University</h3>
                         <div class="position">
                             <h4>Full-stack Web Development Bootcamp</h4>
-                            <h5>April 2022 - September 2022</h5>
+                            <h5>April 2022 - Sept. 2022</h5>
                         </div>
                     </div>
                 </div>
