added password generator to projects section

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                     </div>
                     
                     <div class="project-3 project">
-                        <a class="project-title" href="">
-                            <h3>Empty Project</h3>
+                        <a class="project-title" href="https://lakelonbailey.github.io/PasswordGenerator/">
+                            <h3>Password Generator</h3>
                         </a>
                     </div>
                     <div class="project-4 project">
