added code quiz to projects

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                         </a>
                     </div>
                     <div class="project-4 project">
-                        <a class="project-title" href="">
-                            <h3>Empty Project</h3>
+                        <a class="project-title" href="https://lakelonbailey.github.io/code-quiz/">
+                            <h3>Code Quiz</h3>
                         </a>
                     </div>
                 </div>
