fixed code quiz link

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </a>
                     </div>
                     <div class="project-4 project">
-                        <a class="project-title" href="https://lakelonbailey.github.io/code-quiz/">
+                        <a class="project-title" href="https://lakelonbailey.github.io/Code-Quiz/">
                             <h3>Code Quiz</h3>
                         </a>
                     </div>
