adjusted get to know me section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
                             </a>
                     </div>
                     <div class="contact-info">
-                        <h3 class="gtkm-title">Contact</h3>
+                        <h3 class="gtkm-title">Get in Touch!</h3>
                         <ul>
                             <li>
                                 Email: <a href="mailto:lake.bailey@icloud.com">Lake.Bailey@icloud.com</a>
-                            </li>
-                            <li>
-                                Cell Phone: (865) 816-4695
                             </li>
                         </ul>
                     </div>
@@ -60,7 +57,7 @@
                     <div class="about info-section">
                         <h3 class="gtkm-title">About</h3>
                         <p>
-                            Hello! My name is Lakelon Bailey, and I am a computer science student at the University of Tennesse, Knoxville. I am also a student of Vanderbilt University's coding bootcamp. My hometown is Lenoir City, TN, but I currently live in Knoxville, TN. This website lists my programming projects as well as some of my professional/academic history. I am currently working as a restaurant server for Firebirds Wood Fired Grill, but I plan to start a freelance web development business once I graduate from Vanderbilt's bootcamp. 
+                            Hello! My name is Lakelon Bailey, and I am a computer science student at the University of Tennesse, Knoxville. I am also a student of Vanderbilt University's coding bootcamp. My hometown is Lenoir City, TN, but I currently live in Knoxville, TN. This website lists my programming projects as well as some of my professional/academic history. I am currently working as a freelance web developer. I am currently under contract with Outlier's Advantage: ACT Prep Academy for the development of ACTPrep.com. 
                         </p>
                     </div>
                     <div class="info-section">
