added Simple Shopper to project display

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects primary-section">
                 <div class="main-project">
-                    <a class="project-title" href="https://lakelonbailey.github.io/LakelonBailey.io/">
-                        <h3>Personal Website</h3>
+                    <a class="project-title" href="https://sidhelore.github.io/Simple-Shopper/">
+                        <h3>Simple Shopper</h3>
                     </a>
                 </div>
                 <div class="project-box">
@@ -129,8 +129,8 @@
                     </div>
 
                     <div class="project-2 project">
-                        <a class="project-title" href="https://lakelonbailey.github.io/run-buddy/">
-                            <h3>Run Buddy</h3>
+                        <a class="project-title" href="https://lakelonbailey.github.io/LakelonBailey.io/">
+                            <h3>Personal Website</h3>
                         </a>
                     </div>
                     
