added project 2 to portfolio

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 </div>
                 <div class="project-box">
                     <div class="project-1 project">
-                        <a class="project-title" href="https://lakelonbailey.github.io/Horiseon-Code-Refactor/">
-                            <h3>Horiseon Code Refactor</h3>
+                        <a class="project-title" href="https://ltb-cinephilia.herokuapp.com/">
+                            <h3>Cinephiles</h3>
                         </a>
                     </div>
 
